--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "202ca291",
+   "id": "73b87816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c53c71c0",
+   "id": "222dfe89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "2ca78f9e",
+   "id": "6ed5c622",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "bc1858d0",
+   "id": "6d364d7d",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "5774bc3c",
+   "id": "309052cf",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f68149c0",
+   "id": "04fadebd",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8ed525af",
+   "id": "283d4023",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "88171e5c",
+   "id": "81162f75",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "df647360",
+   "id": "6e80c21c",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b42c47ce",
+   "id": "f78133ef",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "fe88f6b9",
+   "id": "8fd6225d",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "cc5d8105",
+   "id": "7481e67a",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1d86c02d",
+   "id": "4ad0ef34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "865fd49b",
+   "id": "1fca21ec",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "90e5d183",
+   "id": "71fd4256",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "7de737d6",
+   "id": "661e0f6e",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "06b16499",
+   "id": "a3a6dab6",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "966ca072",
+   "id": "8f22f797",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d5149491",
+   "id": "e2e7a7b3",
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "bd56e169",
+   "id": "8267e47a",
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "442e73d3",
+   "id": "613e0d11",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "7c4cdace",
+   "id": "43a8c9c6",
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "66f7ff88",
+   "id": "4da3e1bb",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "9692c709",
+   "id": "75289af1",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "fca0bdbb",
+   "id": "39a77442",
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "7e01aedd",
+   "id": "549e8bc8",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "f03bc4e9",
+   "id": "22778c7a",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "088e9537",
+   "id": "eaab9d50",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "29fad6dd",
+   "id": "2d3a3291",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "ee467193",
+   "id": "ddb39040",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "0b4e1580",
+   "id": "f85ce4f1",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "04d84611",
+   "id": "e2ed845b",
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "1b2943eb",
+   "id": "2d70220d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e2eb464e",
+   "id": "70512f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "fff47f62",
+   "id": "38a86e21",
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "6c2838da",
+   "id": "0603c9a6",
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2116,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b6865ee8",
+   "id": "36be24e7",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "14aa5733",
+   "id": "f2456b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "4003b375",
+   "id": "4dbb1616",
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2231,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "a89cc7ec",
+   "id": "763aa910",
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "669b5c88",
+   "id": "fb511265",
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2345,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "0e7d3a6c",
+   "id": "4b5f7a12",
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "51ff4bae",
+   "id": "cd0be80a",
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "1186221e",
+   "id": "23826283",
    "metadata": {
     "scrolled": true
    },
@@ -2554,7 +2554,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "efbbd5e3",
+   "id": "ca0e300f",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "dd08d1b5",
+   "id": "c6600c4b",
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "f38e362e",
+   "id": "b171678c",
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "9e7f5d95",
+   "id": "08cef817",
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2704,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "0348b755",
+   "id": "9cc553d6",
    "metadata": {},
    "outputs": [
     {
@@ -2937,7 +2937,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "2f2a867a",
+   "id": "5126ae8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "14fa37ee",
+   "id": "db9bbc85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2963,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "6e008c72",
+   "id": "23c82e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,7 +2976,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "d50aa2ba",
+   "id": "e83f1155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2989,7 +2989,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "ded8b4f3",
+   "id": "1296565a",
    "metadata": {},
    "outputs": [
     {
@@ -3132,7 +3132,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "f0777cc0",
+   "id": "0c895dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3143,7 +3143,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "bd4aef51",
+   "id": "2c5f635e",
    "metadata": {},
    "outputs": [
     {
@@ -3181,7 +3181,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "5191e7b0",
+   "id": "959d7c4b",
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "51948bdc",
+   "id": "78b8b161",
    "metadata": {},
    "outputs": [
     {
@@ -3484,7 +3484,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "f5dca76d",
+   "id": "7a972ddc",
    "metadata": {},
    "outputs": [
     {
@@ -3631,8 +3631,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "id": "a686f37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ee80a4b",
+   "id": "72842430",
    "metadata": {},
    "outputs": [],
    "source": []
